@@ -7,7 +7,7 @@
 
     <groupId>de.mediathekview</groupId>
     <artifactId>MediathekView</artifactId>
-    <version>14.1.0</version>
+    <version>14.2.0</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -86,28 +86,32 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.language.version>21</jdk.language.version>
         <kotlin.language.target>21</kotlin.language.target>
-        <kotlin.version>2.0.0</kotlin.version>
+        <jvm.target.version>21</jvm.target.version>
+
+        <kotlin.version>2.1.10</kotlin.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
 
         <maven.compiler.source>${jdk.language.version}</maven.compiler.source>
-        <maven.compiler.target>${jdk.language.version}</maven.compiler.target>
+        <maven.compiler.target>${jvm.target.version}</maven.compiler.target>
 
         <annotations.version>24.1.0</annotations.version>
         <assertj-core.version>3.26.3</assertj-core.version>
         <commons-configuration2.version>2.11.0</commons-configuration2.version>
         <commons-io.version>2.11.0</commons-io.version>
-        <commons-lang3.version>3.15.0</commons-lang3.version>
+        <commons-lang3.version>3.17.0</commons-lang3.version>
         <controlsfx.version>11.2.1</controlsfx.version>
-        <flatlaf.version>3.5</flatlaf.version>
-        <guava.version>33.2.1-jre</guava.version>
+        <flatlaf.version>3.5.4</flatlaf.version>
+        <guava.version>33.4.0-jre</guava.version>
+        <icu4j.version>76.1</icu4j.version>
         <install4j-maven-plugin.version>1.1.2</install4j-maven-plugin.version>
-        <jackson.version>2.17.2</jackson.version>
-        <jaffree.version>2023.09.10</jaffree.version>
-        <javafx.version>22</javafx.version>
+        <jackson.version>2.18.0</jackson.version>
+        <jaffree.version>2024.08.29</jaffree.version>
+        <javafx.version>23.0.1</javafx.version>
         <javax.transaction-api.version>1.3</javax.transaction-api.version>
-        <jna.version>5.14.0</jna.version>
+        <jna.version>5.16.0</jna.version>
         <junit.jupiter.version>5.10.3</junit.jupiter.version>
-        <log4j2.version>2.23.1</log4j2.version>
+        <lucene.version>10.1.0</lucene.version>
+        <log4j2.version>2.24.3</log4j2.version>
         <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
         <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -123,33 +127,35 @@
         <mockito.version>5.12.0</mockito.version>
         <okhttp.version>5.0.0-alpha.14</okhttp.version>
         <picocli.version>4.7.6</picocli.version>
-        <sqlite-jdbc.version>3.46.0.0</sqlite-jdbc.version>
-        <xz.version>1.9</xz.version>
+        <sqlite-jdbc.version>3.48.0.0</sqlite-jdbc.version>
+        <xz.version>1.10</xz.version>
 
         <mainclass>mediathek.Main</mainclass>
 
-        <!-- Zulu without JavaFX is used on Linux and Windows -->
-        <install4j.zulu.jdk.version>21/21.0.1</install4j.zulu.jdk.version>
-        <install4j.jdk.min-version>21</install4j.jdk.min-version>
-
-        <!-- VM Parameters Windows x64 -->
-        <install4j.vmparameters.win.64>-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact -XX:MaxRAMPercentage=50.0
-            -XX:+UseStringDeduplication -DexternalUpdateCheck
-        </install4j.vmparameters.win.64>
-        <!-- VM Parameters Linux 64bit Intel and ARM -->
-        <install4j.vmparameters.linux.64>-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact
-            -XX:MaxRAMPercentage=50.0 -XX:+UseStringDeduplication --add-opens java.desktop/sun.awt.X11=ALL-UNNAMED
-            -DexternalUpdateCheck
-        </install4j.vmparameters.linux.64>
-
+        <install4j.version>10.0.9</install4j.version>
         <install4j.home>./install4j${install4j.version}</install4j.home>
         <!--suppress UnresolvedMavenProperty -->
         <install4j.licenseKey>${env.LICENSE_KEY_10}</install4j.licenseKey>
-        <install4j.version>10.0.7</install4j.version>
-        <lucene.version>9.11.1</lucene.version>
+        <install4j.jdk.min-version>22</install4j.jdk.min-version>
+
+        <!-- VM Parameters Windows x64 -->
+        <install4j.vmparameters.win.64>-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact -XX:MaxRAMPercentage=50.0
+            -XX:+UseStringDeduplication --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.vector -DexternalUpdateCheck
+        </install4j.vmparameters.win.64>
+        <!-- VM Parameters Linux 64bit Intel and ARM -->
+        <install4j.vmparameters.linux.64>-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact
+            -XX:MaxRAMPercentage=50.0 -XX:+UseStringDeduplication --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.vector --add-opens java.desktop/sun.awt.X11=ALL-UNNAMED
+            -DexternalUpdateCheck
+        </install4j.vmparameters.linux.64>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.ibm.icu</groupId>
+            <artifactId>icu4j</artifactId>
+            <version>${icu4j.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.github.lgooddatepicker</groupId>
             <artifactId>LGoodDatePicker</artifactId>
@@ -166,12 +172,18 @@
             <artifactId>lucene-queryparser</artifactId>
             <version>${lucene.version}</version>
         </dependency>
-
         <dependency>
-            <groupId>com.install4j</groupId>
-            <artifactId>install4j-runtime</artifactId>
-            <version>${install4j.version}</version>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-analysis-common</artifactId>
+            <version>${lucene.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queries</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
+
+
 
         <dependency>
             <groupId>org.jfree</groupId>
@@ -535,7 +547,7 @@
                 <executions>
                     <execution>
                         <id>compile</id>
-                        <phase>compile</phase>
+                        <phase>process-sources</phase>
                         <goals>
                             <goal>compile</goal>
                         </goals>
@@ -572,7 +584,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <release>${jdk.language.version}</release>
+                    <release>${jvm.target.version}</release>
                     <forceJavacCompilerUse>true</forceJavacCompilerUse>
                     <compilerArgs>
                         <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
@@ -1084,6 +1096,7 @@
                 </os>
             </activation>
             <properties>
+                <jvm.target.version>21</jvm.target.version>
                 <javafx.platform>mac</javafx.platform>
             </properties>
             <dependencies>
